fix sidebar overlapped with page content for homepage, other pages need to be fixed too

--- a/client/src/components/side_bar/side_bar.css
+++ b/client/src/components/side_bar/side_bar.css
@@ -36,6 +36,9 @@
     }
     .Sidebar {
         width: 70px;
+        height: 100vh;
+        display: flex;
+        position: fixed;
     }
 }
 
